--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2024"
 [dependencies]
 embedded-graphics = "0.8.1"
 limine = "0.5.0"
+lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
+spin = "0.10.0"
 
 [profile.kernel]
 inherits = "release"
