--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ limine = "0.5.0"
 lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
 spin = "0.10.0"
 x86_64 = "0.15.4"
+uart_16550 = "0.4.0"
 
 [profile.kernel]
 inherits = "release"
