--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,8 @@
 [build]
 target = "x86_64-unknown-none"
 
+[unstable]
+build-std = ["core", "compiler_builtins", "alloc"]
+
 [target.x86_64-unknown-none]
 rustflags = ["-C", "link-arg=-no-pie"]
