--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
 spin = "0.10.0"
 x86_64 = "0.15.4"
 uart_16550 = "0.4.0"
+linked_list_allocator = "0.10.5"
 
 [profile.kernel]
 inherits = "release"
