--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,9 @@ spin = "0.10.0"
 x86_64 = "0.15.4"
 uart_16550 = "0.4.0"
 linked_list_allocator = "0.10.5"
+bevy = { version = "0.17.3", default-features = false, features = [
+    "default_no_std",
+] }
 
 [profile.kernel]
 inherits = "release"
