--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ linked_list_allocator = "0.10.5"
 bevy = { version = "0.17.3", default-features = false, features = [
     "default_no_std",
 ] }
+catppuccin = { git = "https://github.com/ItsSunnyMonster/catppuccin-rust.git" }
 
 [profile.kernel]
 inherits = "release"
